Applying findbugs based patch from DBUTILS-75
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/dbutils/trunk@1090737 13f79535-47bb-0310-9956-ffa450edef68